--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.4"
   }
 }
