--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-slick": "^0.23.10",
-    "animate.css": "^4.1.1",
-    "aos": "^2.3.4",
+    "aos": "^3.0.0-beta.6",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "next": "13.2.1",
